History of this buildout
========================

NOTE: This is now a maintenance branch as long as Minaraad is still
hosted by Zest.  Trunk (4.x) will be used in Belgium on the LNE
servers, using RelStorage.  Any changes done in this maintenance
branch must be ported to trunk as well.


3.38 (unreleased)
-----------------

- Set the environment var PTS_LANGUAGES to only nl, so no longer en as well.
  [maurits]


3.37 (2011-12-08)
-----------------

- Update Products.CMFSquidTool to 1.5.1 and Products.CacheSetup to 1.2.1.
  [maurits]

- Update varnish to current ZestSkel standards, recipe 1.2.1, varnish 2.1.5.
  [maurits]


3.36 (2011-12-08)
-----------------

- Made two more forms use a POST request in hearings and events.
  [maurits]


3.35 (2011-12-07)
-----------------

- Fixed one more css color issue in the digibib.
  [maurits]


3.34 (2011-12-07)
-----------------

- Guard the transitions of the project and meeting workflows with the permissions
  'Request review' and 'Review portal content'
  [maurits]

- Make Digibib an orderable folder.
  [maurits]

- Always exclude the project and meeting containers from navigation.
  [maurits]

- Edit the portal types xml to have the View action just point to the
  object url instead of base_view or similar.
  [maurits]

- Do not show th subscribe or unsubscribe option directly after
  someone has subscribed.  This seems to confuse people.
  [maurits]

- Show link to Digibib DashBoard in meetings, projects, and lists of
  meetings, projects and organizations.
  [maurits]


3.33 (2011-12-02)
-----------------

- Fixed inconsistency in list of projects of other years, as we sorted
  by advisory date and grouped by the year of the deadline, which
  could lead to double entries in the year drop down.  We now group by
  the year of the advisory date.
  [maurits]

- Some css fixes in the div.widget.
  [maurits]


3.32 (2011-12-02)
-----------------

- Show a state dropdown instead of a checkbox for changing the state